# AlphaMeterQC

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  QUICKSTART_OLLAMA.md  README.md  env.example  index.html  login_dialog.spec  mkdocs.yml  objects.inv  pyproject.toml  test_ollama.py  todo.md
.continue/: README.md  config.yaml
.continue/agents/: alphameterqc-config.yaml  arch-dev-qa-devOps_a .yaml  arch-dev-qa-devOps_e.yaml  arch-dev-qa-devOps_m.yaml  arch-dev-qa-devOps_o.yaml  arch-dev-qa-devOps_s .yaml  business_analyst_a.yaml  business_analyst_e.yaml  business_analyst_m.yaml  business_analyst_o.yaml  business_analyst_s.yaml  config.yaml  default-config.yaml  dev-qa-devOps_m.yaml  project_manager.yaml  project_manager_a.yaml  project_manager_e.yaml  project_manager_m.yaml  project_manager_o.yaml
.continue/context/: context_config.yaml  diff-context.yaml  terminal-context.yaml
.continue/information/: inf_prompts.md  ref_site_continue.md
.continue/mcpServers/: DevServer.yaml  mcpServers.yaml
.continue/models/: Alice AI LLM Flash.yaml  DeepSeek V4 Flash.yaml  Qwen3 235B.yaml  Qwen3.6-35B.yaml  Untitled-1.md  Untitled-2.md  Untitled-3.md  all.yaml  deepseek-coder:6.7b-c.yaml  gpt-oss-20b.yaml  instruction.md  mistral-7b.yaml  mistral:7b-complete.yaml  mistral:7b-main.yaml  nomic-embed-text.yaml  qwen2.5-coder-3b-ac.yaml  qwen2.5-coder-7b-cs.yaml  qwen2.5-coder:1.5b-ac.yaml  qwen2.5-coder:1.5b.yaml  qwen2.5-coder:3b-complete.yaml  qwen2.5-coder:3b-e.yaml  qwen2.5-coder:3b_chat.yaml  qwen2.5-coder:7b-sub.yaml  qwen2.5-coder:7b.yaml  qwen2.5:7b-c.yaml  qwen2.5:7b-main.yaml  qwen3.5:4b-c.yaml  qwen3.5:4b-complete.yaml  qwen3.5:4b-e.yaml  qwen3.5:4b-main.yaml
.continue/models_/: all.yaml
.continue/models__/: Qwen3 235B.yaml  Qwen3.6-35B.yaml  deepseek-coder-6.7b-e.yaml  nomic-embed-text.yaml  qwen2.5-7b-e.yaml  qwen2.5-coder-3b-cs.yaml  qwen2.5-coder-7b-e.yaml
.continue/prompts/: 00-optimize-context-usage.md  config_yaml_instruction.md  context_transfer.md  dev_env_setup.md  docs_knowledge.md  edit-safety-rules.md  feature_workflow.md  generate-docs.md  generate-tests.md  generate_docs.md  generate_tests.md  prompts.md  (+8 more)
.devcontainer/: Dockerfile  devcontainer.json
.lingma/: rules.md
db/: 08_ddl_schema.sql  09_dml_seed.sql  10_dcl_security.sql  14_load_test_data.sql  16_backup_script.sh  17_restore_script.sh
devops_config_inventory/: index.html
docs/: QUICKSTART_OLLAMA.md  ollama_setup.md
examples/: ollama_example.py  test_ollama.py
scripts/: activate_venv.bat  activate_venv.sh  build_docs.bat  build_docs.ps1  build_docs.sh  check_env.sh  run_tests.sh  settings.md  setup.bat  setup.ps1  setup.sh
search/: search_index.json
(+178 files in other folders)
